trunk/Archive2/96/13c3fad7ce3062/output
main.cpp:19:2: error: expected ';' after class
}
 ^
 ;
1 error generated.
